relm4-macros/tests/ui/compile-fail/pre-view-return.stderr
error[E0308]: mismatched types
  --> tests/ui/compile-fail/pre-view-return.rs:8:1
   |
8  | #[relm4_macros::component]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^- help: try adding a return type: `-> __DoNotReturnManually`
   | |
   | expected `()`, found `__DoNotReturnManually`
   |
note: return type inferred to be `()` here
  --> tests/ui/compile-fail/pre-view-return.rs:20:13
   |
20 |             return;
   |             ^^^^^^
   = note: this error originates in the attribute macro `relm4_macros::component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/compile-fail/pre-view-return.rs:8:1
  |
8 | #[relm4_macros::component]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | expected `__DoNotReturnManually`, found `()`
  | expected due to this
  |
  = note: this error originates in the attribute macro `relm4_macros::component` (in Nightly builds, run with -Z macro-backtrace for more info)
